# GreekBot

./: .env.example  .gitignore  profile.yaml  pyproject.toml  render.yaml
.github/workflows/: cron.yml
data/: quizlet_vocabulary.csv  sample.csv  word_families_sample.csv
greekapp/: assessor.py  cli.py  config.py  cron.py  db.py  importer.py  messenger.py  profile.py  report.py  scheduler.py  server.py  srs.py  telegram.py  webhook.py
tests/: test_assessor.py  test_importer.py  test_messenger.py  test_profile.py  test_report.py  test_scheduler.py  test_srs.py
